[ADD] lazyload on some page & upcoming events page

--- a/resources/views/about-us/header-bg.edge
+++ b/resources/views/about-us/header-bg.edge
@@ -2,6 +2,6 @@
     <div class="container">
         @!component('partials/heading-section', {text: titlePage})
     </div>
-    <div class="cover-primary h-450px bg-cover bg-no-repeat" 
-    style="background-image: url({{ bgHeader }})"></div>
+    <div class="cover-primary h-450px bg-cover bg-no-repeat lazyload" 
+    data-bg="{{ bgHeader }}"></div>
 </header>
