--- a/resources/views/about-us/index.edge
+++ b/resources/views/about-us/index.edge
@@ -1,6 +1,7 @@
 @layout('layouts/app')
 
 @section('header')
+    @set('bgHeader', primaryCover)
     @include('about-us/header-bg')
 @endsection
 @section('body')
