--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -2,7 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 @import "./brand";
 @import "./utilities";
 @import './form';
 @import './number';
+@import './img';
