[ADD] contact us page

--- a/resources/assets/scss/_utilities.scss
+++ b/resources/assets/scss/_utilities.scss
@@ -1,3 +1,9 @@
+.content-from-wysiwyg {
+    p {
+        @apply mb-4;
+    }
+}
+
 @layer utilities {
     .hide-el {
         @apply invisible opacity-0;
@@ -15,4 +21,5 @@
     .after\:empty-content::after {
         content: '';
     }
+
 }
