[ADD] load more article

--- a/resources/views/contact-us/index.edge
+++ b/resources/views/contact-us/index.edge
@@ -60,8 +60,7 @@
                 @!component('partials/btn', {
                     link: 'submit', 
                     text: 'Kirim', 
-                    bg: 'red-primary',
-                    addClass: 'hover:bg-red-700'
+                    addClass: 'bg-red-primary hover:bg-red-700'
                 })
             </form>
         </div>
