--- a/resources/views/event/past.edge
+++ b/resources/views/event/past.edge
@@ -32,9 +32,8 @@
 
             <div class="text-center">
                 @!component('partials/btn', {
-                    text: 'Load more ...', 
-                    bg: 'black',
-                    addClass: 'bg-opacity-80 mx-auto hover:bg-gray-900'
+                    text: 'Load more ...',
+                    addClass: 'bg-black bg-opacity-80 mx-auto hover:bg-gray-900'
                 })
             </div>
             
