--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -124,8 +124,7 @@
             </div>
         </div>
         @!component('partials/btn', {
-            bg: 'transparent',
-            addClass: 'rounded-md fixed right-10 bottom-10 btn-back-top hide-el',
+            addClass: 'bg-transparent rounded-md fixed right-10 bottom-10 btn-back-top hide-el',
             icon: '/assets/img/icon/arrow-up.svg'
         })
     </footer>
