--- a/resources/views/partials/article.edge
+++ b/resources/views/partials/article.edge
@@ -1,6 +1,6 @@
-<article class="flex relative hover:child-underline
+<article class="flex relative hover:child-underline {{ addClass || '' }}
 {{ direction == 'vertical' ? 'flex-col' : 'flex-row' }} 
-border-2 border-grey-primary mb-4">
+border-2 border-grey-primary">
     @!component('partials/img-lazy', {
         src: cover,
         alt: title,
@@ -10,13 +10,15 @@ border-2 border-grey-primary mb-4">
     items-start flex flex-col justify-center">
         @if(direction == 'vertical')
         <div class="p-4 border-b-2 border-grey-primary w-full">
-            <p>{{ category }}</p>
+            <p class="article__category">{{ category }}</p>
         </div>
         @else
-        <p class="font-bold text-xl mb-4 text-to-underline">
+        <p class="font-bold text-xl mb-4 text-to-underline article__title">
             {{ title }}
         </p>
         @end
-        <p class="{{ direction == 'vertical' ? 'p-4 font-bold' : '' }}">{{ excerpt }}</p>
+        <p class="{{ direction == 'vertical' ? 'p-4 font-bold' : '' }} article__excerpt">
+            {{ excerpt }}
+        </p>
     </figcaption>
 </article>
