--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -5,10 +5,9 @@
     data-bg="{{ primaryCover }}"
     class="h-7/10-screen bg-no-repeat bg-cover flex items-end justify-center lazyload">
         @!component('partials/btn', {
-            text: 'Tentang kami', 
-            bg: 'red-primary',
+            text: 'Tentang kami',
             size: 'wider',
-            addClass: 'transform translate-y-1/2'
+            addClass: 'bg-red-primary transform translate-y-1/2'
         })
     </header>
 @end
@@ -131,8 +130,7 @@
                 @!component('partials/btn', {
                     link: 'submit', 
                     text: 'Salurkan', 
-                    bg: 'red-primary',
-                    addClass: 'hover:bg-red-700'
+                    addClass: 'bg-red-primary hover:bg-red-700'
                 })
             </form>
         </div>
