--- a/resources/views/event/upcoming.edge
+++ b/resources/views/event/upcoming.edge
@@ -1,32 +1,37 @@
 @layout('layouts/app')
 
 @section('body')
-<div class="lg:ml-14">
-    @!component('partials/header-title', {
-        title: 'Program Kerja Mardhika',
-        logo: contentPage.logo
-    })
-</div>
-<section class="py-10">
-    <div class="container">
-        @!component('partials/heading-section', {
-            text: capitalCase(noCase(contentPage.page_name))
+    <div class="lg:ml-14">
+        @!component('partials/header-title', {
+            title: 'Program Kerja Mardhika',
+            logo: contentPage.logo
         })
-        <div class="grid grid-cols-3 gap-x-6 gap-y-8">
-            @each((event, index) in upcomingEvents)
-                @!component('partials/article', {
-                    direction: 'vertical',
-                    category: event.blogCategory.category,
-                    title: event.title,
-                    cover: event.cover,
-                    link: route('blog.show', {id: event.id}),
-                    excerpt: excerpt(event.content, 200, {
-                        completeWords: false,
-                        suffix: ' [...]'
-                    })
-                })
-            @end
-        </div>
     </div>
-</section>
+    <section class="py-10">
+        <div class="container">
+            @!component('partials/heading-section', {
+                text: capitalCase(noCase(contentPage.page_name))
+            })
+            <div class="grid grid-cols-3 gap-x-6 gap-y-8" id="parent-upcoming-events">
+                @each((event, index) in upcomingEvents)
+                    @!component('partials/article', {
+                        direction: 'vertical',
+                        category: event.blogCategory.category,
+                        title: event.title,
+                        cover: event.cover,
+                        link: route('blog.show', {id: event.id}),
+                        excerpt: excerpt(event.content, 200, {
+                            completeWords: false,
+                            suffix: ' [...]'
+                        })
+                    })
+                @end
+            </div>
+
+            @set('lastPageNumber', upcomingEvents.lastPage)
+            @set('parentRecord', '#parent-upcoming-events')
+            @include('event/load-more-btn')
+
+        </div>
+    </section>
 @endsection
