[UPDATE] blog dummy record

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -9,7 +9,7 @@
     @!section('style')
 </head>
 <body class="font-roboto">
-    <nav class="bg-white h-20">
+    <nav class="bg-white h-20" id="primary-nav">
         <div class="container flex items-center h-full">
             @include('partials/brand-logo')
             <ul class="flex items-center space-x-8">
