[FIX] sataset manage

--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <main class="content">
+            <main class="content py-2">
                 <div class="container-fluid">
                     @!section('body')
                 </div>
