[ADD] sataset index page

--- a/resources/views/sataset/index.edge
+++ b/resources/views/sataset/index.edge
@@ -12,25 +12,23 @@
       @!component('partials/heading-section', {text: 'Sataset', align: 'left'})
       <div id="parent-sataset" class="flex flex-col gap-y-5">
           @each((sataset, index) in satasets)
-              @!component('partials/article', {
+              @component('partials/article', {
                   title: sataset.title,
                   addClass: 'article-to-load-more',
                   link: route('sataset.show', {id: sataset.id}),
                   excerpt: excerpt(sataset.short_desc, 200, {
                       completeWords: false,
-                      suffix: ' [...]'
+                      suffix: '...'
                   })
               })
+                @!component('partials/btn', {
+                  text: 'Open PDF',
+                  link: sataset.file,
+                  addClass: 'bg-blue-500 rounded-full mt-3',
+                  target: '_blank'
+                })
+              @end
           @end
-      </div>
-      <div class="text-center mt-10">
-          @!component('partials/btn', {
-              text: 'Load more ...',
-              addClass: 'bg-black mx-auto hover:bg-gray-900 btn-load-more',
-              'data-page': 1,
-              'data-last-page': satasets.lastPage,
-              'data-parent-record': '#parent-sataset'
-          })
       </div>
   </div>
 </section>
