--- a/resources/views/partials/article.edge
+++ b/resources/views/partials/article.edge
@@ -8,7 +8,7 @@ border-2 border-grey-primary">
           addClass: 'h-200px object-cover article__img'
       })
     @endif
-    <figcaption class="{{ direction != 'vertical' ? 'p-4' : '' }}
+    <div class="{{ direction != 'vertical' ? 'p-4' : '' }}
     items-start flex flex-col justify-center">
         @if(direction == 'vertical')
             <div class="p-4 border-b-2 border-grey-primary w-full">
@@ -21,5 +21,9 @@ border-2 border-grey-primary">
                 {{ excerpt }}
             </p>
         @end
-    </figcaption>
+
+        {{{ await $slots.main() }}}
+    </div>
+
+
 </article>
