[ADD] new category feature

--- a/resources/views/blog/category/index.edge
+++ b/resources/views/blog/category/index.edge
@@ -15,4 +15,12 @@
             })
         @end
     @end
+
+    @!component('partials/trigger-modal', {
+      targetModal: 'add-new-category',
+      classnya: 'btn btn-default text-primary m-3',
+      icon: 'fa-trash',
+      text: 'Tambah Kategori'
+    })
+
 @end
