[FIX] sataset on homepage #2

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -21,7 +21,7 @@
                   @each((sataset, index) in satasets)
                       <figure class="flex items-center py-10">
                           <figcaption class="text-white px-10">
-                              <a class="font-bold text-lg mb-5 block" href="{{ sataset.file }}" target="__blank">
+                              <a class="font-bold text-lg mb-5 block underline" href="{{ sataset.file }}" target="__blank">
                                 {{ sataset.title }}
                               </a>
                               <p>{{ sataset.short_desc }}</p>
